re PR ada/8344 (mips-rtems build problem)

2003-01-29  Laurent Guerby <guerby@acm.org>

        PR ada/8344
        * final.c: rename to adafinal.c to avoid file name conflicts with gcc file.
        * Makefile.in: match previous change.
        * Make-lang.in: match previous change.

From-SVN: r62122